# spacetime

./: .gitattributes  .gitignore  404.html  Cargo.toml  Makefile  README.md  book.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  run.py  sandbox.ipynb
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: bevy.yaml  build-doc-deploy.yaml  build-docs-deploy.yaml  build-python.yaml  build-rust.yaml  build-test-deploy.yaml  build.yaml  ci.yaml  deploy.yaml  doc.yaml  docs.yaml  python.yaml  release.yaml  rust.yaml
assets/: README.md  settings.ron
assets/models/: Earth.glb  Satellite.glb
assets/poly/: Moon.glb  Satellite.glb
assets/shaders/: time_dilation.wgsl
captains_log/: index.html
clocss/: __init__.py  comms.py  model.py  orbits.py  server.py
clocss/data/: dynamics.yaml
clocss/demos/marcopolo/: agent.py  model.py  run.py  server.py
clocss/demos/orbits/: model.py  run.py  server.py
clocss/tools/: __init__.py  grid.py  simple_continuous_canvas.js  visualizations.py
data/: dynamics.yaml
docs/: .gitignore  SUMMARY.md  agents.md  approach.md  architecture.md  book.toml  build.py  captains_log.md  design-decisions.md  devlog.md  docs-requirements.txt  index.md  motivation.md  pyproject.toml  python-demos.md  reference.md  requirements.md  requirements.txt  site.css  structure.md  todo.md
docs/archive/: index.md  orbits.md  simulation_limits.md
docs/archive/physics/: index.md  scale.md  time_dilation.md
docs/demos/: marco_polo.md  marcopolo_demo.md  orbits.md  orbits_demo.md
docs/design/: simulation_limits.md  tools_and_frameworks.md
docs/dev/log/: 2024-12-08.md  2024-12-22.md  2024-12-23.md  2024-12-30.md  2025-01-01.md  2025-01-04.md  2025-01-05.md  2025-01-06.md  2025-01-23.md  2025-03-15.md  2025-03-16.md
docs/devlog/: v0.0.0.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md
docs/diagrams/: arch.drawio  orbits.drawio
docs/examples/: networkx_learning.md
docs/extras/: katex.js
docs/lunar-pnt/: 00-index.md
docs/notebooks/: sandbox.ipynb  simpledynamics.yaml
docs/physics/: time_dilation.md
docs/pnt-networks/: index.md
docs/python/: python_reference.md
docs/python/demos/: marco_polo.md  orbits.md
docs/relativity/: 00-index.md  01-from-motion.md  01-light.md  01-special.md  02-general.md  02-gravity.md  general-relativity.md  index.md  special-relativity.md
docs/relativity/general/: 00-index.md
docs/relativity/special/: 00-index.md  01-reference-frames.md  02-time-dilation.md  03-length-contraction.md  04-transformations.md
docs/relativity/vectors/: 01-lorentz-boost-intro.md
docs/research-papers/: index.md
docs/rust/demos/: marco_polo.md  marcopolo-rs.md
docs/src/: SUMMARY.md  devlog.md  index.md
docs/src/archive/: agents.md
docs/src/archive/devlog/: v0.2.1.md
docs/src/devlog/: 2024-12-15.md  2025-01-05.md
docs/src/relativity/general/: 00-index.md
docs/src/relativity/special/: 02-time-dilation.md  03-length-contraction.md
docs/src/relativity/vectors/: 00-index.md  01-lorentz-boost-intro.md
docs/src/research-papers/: index.md
docs/technical/: agents.md  bevy_resources.md  goap.md  potentials.md  scale.md  time.md  time_dilation.md
docs/timekeeping/: 00-index.md  index.md
examples/example_1/: scenario.rs
hifitime_egui/: Cargo.toml
hifitime_egui/src/: lib.rs
learning/: __init__.py  pyproject.toml
learning/data/: dynamics.yaml
learning/demos/marcopolo/: __init__.py  agent.py  model.py  run.py  server.py
learning/demos/marcopolo-rs/: Cargo.toml  README.md
learning/demos/marcopolo-rs/src/: main.rs
learning/demos/marcopolo-rs/src/model/: arena.rs  mod.rs  player.rs
learning/demos/orbits/: run.py  server.py
learning/notebooks/: time_dilation.ipynb
learning/tools/: __init__.py  simple_continuous_canvas.js  visualizations.py
lib/bridge/src/: main.rs
lib/engine/: Cargo.toml
lofitime/: Cargo.toml  README.md
lofitime/src/: lib.rs
notebooks/: export_to_md.sh  monte_carlo.ipynb  network_graphs.ipynb  networkx_learning.ipynb  simpledynamics.yaml
reference/: index.html
search/: search_index.json
spacetime/: Cargo.toml
spacetime-bridge/: Cargo.toml  README.md
spacetime-bridge/assets/models/: Sun.glb
spacetime-bridge/src/: main.rs  orbit_prediction.rs  scenario.rs
spacetime-bridge/src/gui/: hud.rs  mod.rs
spacetime-bridge/src/scene/: body.rs  camera.rs
spacetime-core/: Cargo.toml  README.md
spacetime-core/data/: dynamics.yaml
spacetime-core/src/: almanac.rs  lib.rs  orbit_prediction.rs
spacetime-core/src/physics/: schedule.rs
spacetime-engine/: README.md
spacetime-engine/src/: lib.rs  schedule.rs
spacetime-galley/: Cargo.toml  README.md
spacetime/assets/config/: constants.ron  satellites.ron
spacetime/assets/configs/real-scale/: celestials.ron
spacetime/assets/shaders/: gravitational_potential.wgsl
spacetime/src/: bodies.rs  lib.rs  main.rs
spacetime/src/components/: bodies.rs  mod.rs
spacetime/src/entities/: celestials.rs  satellites.rs
spacetime/src/physics/: time.rs
spacetime/src/spawners/: mod.rs
spacetime/src/ui/: datepicker.rs  datetime.rs  mod.rs  palette.rs  shaders.rs  shell.rs
src/: app.rs  camera.rs  constants.rs  cosmic.rs  debug.rs  format.rs  grid.rs  lib.rs  main.rs  mod.rs  model.rs  palette.rs  physics.rs  run.py  scenario.rs  scene.rs  scenes.rs  spacecraft.rs  spacetime.rs  time.rs  ui.rs
src/components/: bodies.rs  body.rs  camera.rs  clock.rs  label.rs  mod.rs  spacecraft.rs  timing.rs
src/dev/: console.rs  debug_ui.rs  mod.rs
src/engine/: celestials.rs  sim.rs
src/entities/: celestials.rs  mod.rs  satellites.rs
src/gui/: mod.rs  select.rs
src/model/: agent.rs  agents.rs  body.rs  clock.rs  crab.rs  dynamics.rs  mod.rs  objects.rs  sim.rs  spacetime.rs  state.rs  time.rs  world.rs
src/physics/: constants.rs  dynamics.rs  mod.rs  nbody.rs  schedule.rs  spacetime.rs  time.rs  time_dilation.rs
src/systems/: spacetime.rs
src/ui/: camera.rs  clock_info.rs  cursor.rs  diagnostics.rs  mod.rs  shell.rs
src/visualization/: world_vis.rs
src/visuals/: camera.rs  mod.rs  ui.rs
(+14 files in other folders)
