[tool.poetry]
name = "clocss-abm"
version = "0.1.0"
description = "an Agent-Based Model of Heterogeneous Lunar Networks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mesa = "^2.1.4"
nyx = "^2.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
