[tool.poetry]
name = "clocss-abm"
version = "0.1.0"
description = "an Agent-Based Model of Heterogeneous Lunar Networks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "clocss"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mesa = "^2.1.4"
nyx-space = "^2.0.0a2"
pandas = "<2.1.0"
matplotlib = "^3.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
