[project]
name = "docs"
version = "0.1.0"
description = "spacetime documentation"
requires-python = ">=3.12"

[project.optional-dependencies]
pdf = [
    "pikepdf >= 9.4.0",
]
mkdocs = [
    "jupyter >= 1.0.0",
    "mkdocs >= 1.5.3",
    "mkdocs-material >= 9.4.8",
    "mkdocstrings >= 0.24.0",
    "mkdocstrings-python >= 1.7.4",
    "mkdocs-include-dir-to-nav >= 1.2.0",
    "mkdocs-git-authors-plugin >= 0.7.2",
    "markdown >= 3.6",
    "pymdown-extensions >= 10.5",
    "pygments >= 2.17.2"
]
manim = [
    "manim >= 0.18.1",
    "manim-physics >= 0.2.3",
    "manim-astronomy >= 0.0.2",
]
