[tool.poetry]
name = "clocss-abm"
version = "0.1.0"
description = "an Agent-Based Model of Heterogeneous Lunar Networks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mesa = "^2.1.4"
nyx-space = "^2.0.0a2"
pandas = "<2.1.0"
matplotlib = "^3.8.1"
networkx = "^3.2.1"
hifitime = "^3.8.5"
numpy = "^1.26.2"
astropy = "^6.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.4"
nbconvert = "^7.11.0"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocs-git-authors-plugin = "^0.7.2"
markdown = "^3.5.1"
pymdown-extensions = "^10.5"
pygments = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
