[package]
name = "spacetime-bridge"                                                                # as in a spaceship bridge
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Observe and Command a Simulation of Heterogeneous Networked Lunar Clocks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
homepage = "https://philiplinden.github.io/clocss-abm/"
repository = "https://github.com/philiplinden/clocss-abm"

[dependencies]
spacetime-core = { path = "../spacetime-core" }
bevy = { version = "0.12.0", default-features = false, features = [
    "default_font",
    "dynamic_linking",
    "multi-threaded",
    "tonemapping_luts",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
] }
bevy_egui = "0.24.0"
humantime = "2.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
