[package]
name = "spacetime-bridge"                                                                # as in a spaceship bridge
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
description = "Observe and Command a Simulation of Heterogeneous Networked Lunar Clocks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
homepage = "https://philiplinden.github.io/clocss-abm/"
repository = "https://github.com/philiplinden/clocss-abm"

[dependencies]
spacetime-core = { path = "../spacetime-core" }
bevy = { version = "0.12.0", features = [
    "dynamic_linking",
    "multi-threaded",
] }
bevy_egui = "0.24.0"
humantime = "2.1.0"
crossbeam-channel = "0.5.11"
particular = { version = "0.6.1", features = ["gpu", "parallel"] }
big_space = "0.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
