[package]
name = "spacetime-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
readme = "README.md"
description = "Run a Simulation of Heterogeneous Networked Lunar Clocks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
homepage = "https://philiplinden.github.io/clocss-abm/"
repository = "https://github.com/philiplinden/clocss-abm"

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
    "dynamic_linking",
    "multi-threaded",
    "trace",
] }
crossbeam-channel = "0.5.11"
nyx-space = "1.1.2"
particular = { version = "0.6.1", features = ["gpu", "parallel"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
