[package]
name = "spacetime-galley"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
description = "Cook up situations of Heterogeneous Networked Lunar Clocks"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
homepage = "https://philiplinden.github.io/spacetime/"
repository = "https://github.com/philiplinden/spacetime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anise = "0.3.0"
bevy = { version = "0.12.0", features = ["dynamic_linking", "multi-threaded"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
